<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home_label" />
        <item
            android:id="@+id/nav_strategy"
            android:icon="@drawable/ic_menu_duck"
            android:title="@string/strategy_label" />
        <item
            android:id="@+id/nav_observer"
            android:icon="@drawable/ic_cloud_black_24dp"
            android:title="@string/observer_label" />
        <item
            android:id="@+id/nav_command"
            android:icon="@drawable/ic_tv_black_24dp"
            android:title="@string/command_label" />
</menu>
