<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:gravity="center">

    <Button
        android:id="@+id/fly_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perform_fly"
        style="@style/DuckBtns"/>

    <Button
        android:id="@+id/quack_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perform_quack"
        style="@style/DuckBtns"/>

    <Button
        android:id="@+id/swim_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perform_swim"
        style="@style/DuckBtns"/>

</LinearLayout>