<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".landing.LandingActivity"
    tools:showIn="@layout/app_bar_landing"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/duckBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strategy_label" />

    <Button
        android:id="@+id/weatherBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/observer_label"/>

    <Button
        android:id="@+id/remoteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/command_label"/>

</LinearLayout>